--- a/index.html
+++ b/index.html
@@ -41,17 +41,21 @@
         header {
             position: fixed;
             top: 0;
+            left: 0;
+            right: 0;
             width: 100%;
             background: rgba(10, 10, 10, 0.95);
             backdrop-filter: blur(10px);
             z-index: 1000;
             border-bottom: 1px solid var(--border-color);
+            -webkit-transform: translateZ(0);
+            transform: translateZ(0);
         }
 
         nav {
             max-width: 1400px;
             margin: 0 auto;
-            padding: 1.5rem 2rem;
+            padding: 1rem 1.5rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -777,6 +781,40 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            header {
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+            }
+
+            nav {
+                padding: 1rem;
+                flex-wrap: wrap;
+                gap: 1rem;
+            }
+
+            .logo {
+                font-size: 1.25rem;
+                width: 100%;
+                text-align: center;
+                order: 1;
+            }
+
+            .cta-buttons {
+                flex-direction: column;
+                width: 100%;
+                order: 2;
+                gap: 0.75rem;
+            }
+
+            .btn {
+                width: 100%;
+                justify-content: center;
+                padding: 0.75rem 1.5rem;
+                font-size: 0.9rem;
+            }
+
             h1 {
                 font-size: 2.5rem;
             }
@@ -790,7 +828,7 @@
             }
 
             .hero {
-                padding: 8rem 1.5rem 4rem;
+                padding: 10rem 1.5rem 4rem;
             }
 
             section {
@@ -807,21 +845,43 @@
                 margin-left: 60px !important;
             }
 
-            .cta-buttons {
-                flex-direction: column;
-                width: 100%;
-            }
-
-            .btn {
-                width: 100%;
-                justify-content: center;
-            }
-
             .solution-grid,
             .learning-grid,
             .comparison-grid,
             .testimonial-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .trust-content {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .hero-cta {
+                flex-direction: column;
+            }
+
+            .btn-large {
+                width: 100%;
+                padding: 1rem 2rem;
+                font-size: 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .trust-content {
+                grid-template-columns: 1fr;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            .subtitle {
+                font-size: 1rem;
+            }
+
+            h2 {
+                font-size: 1.75rem;
             }
         }
 
