--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>AI זה קל - ספרינט AI של 14 יום</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +12,13 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+
+        /* תיקון קריטי למניעת גלילה אופקית (ימינה-שמאלה) */
+        html, body {
+            overflow-x: hidden;
+            width: 100%;
+            max-width: 100vw;
         }
 
         :root {
@@ -34,8 +41,6 @@
             background: var(--primary-bg);
             color: var(--text-primary);
             line-height: 1.6;
-            overflow-x: hidden;
-            width: 100%;
         }
 
         /* Header */
@@ -56,7 +61,7 @@
         nav {
             max-width: 1400px;
             margin: 0 auto;
-            padding: 1rem 1rem;
+            padding: 1rem 1.5rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -76,8 +81,7 @@
 
         .cta-buttons {
             display: flex;
-            gap: 0.5rem;
-            flex-wrap: nowrap;
+            gap: 1rem;
             align-items: center;
         }
 
@@ -85,14 +89,14 @@
             padding: 0.75rem 1.25rem;
             border: none;
             border-radius: 8px;
-            font-size: 0.9rem;
+            font-size: 0.95rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
             display: inline-flex;
             align-items: center;
-            gap: 0.5rem;
+            justify-content: center;
             font-family: 'Heebo', sans-serif;
             white-space: nowrap;
         }
@@ -119,6 +123,9 @@
             transform: translateY(-2px);
         }
 
+        .mobile-text { display: none; }
+        .desktop-text { display: inline; }
+
         /* Hero Section */
         .hero {
             padding: 10rem 1.5rem 6rem;
@@ -139,6 +146,7 @@
             background: radial-gradient(circle, rgba(102, 126, 234, 0.15) 0%, transparent 70%);
             pointer-events: none;
             z-index: 0;
+            max-width: 100vw; /* מונע מהרקע לפרוץ את המסך */
         }
 
         .hero-content {
@@ -255,7 +263,7 @@
         /* Problem Section */
         .problem-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 2rem;
             margin-top: 4rem;
         }
@@ -323,7 +331,7 @@
 
         .features-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 2rem;
             margin-top: 4rem;
         }
@@ -429,7 +437,7 @@
         /* Learning Section */
         .learning-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 2rem;
             margin-top: 3rem;
         }
@@ -480,7 +488,7 @@
         /* Results Section */
         .results-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 2rem;
             margin-top: 3rem;
         }
@@ -590,7 +598,7 @@
         /* Comparison Section */
         .comparison-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 2rem;
             margin: 3rem 0;
         }
@@ -671,7 +679,7 @@
         /* Testimonials */
         .testimonial-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 2rem;
             margin-top: 3rem;
         }
@@ -766,12 +774,14 @@
             border-radius: 16px;
             padding: 3rem;
             margin: 3rem 0;
+            overflow: hidden;
         }
 
         .form-placeholder {
             color: var(--text-secondary);
             font-size: 1.1rem;
             line-height: 1.8;
+            word-wrap: break-word;
         }
 
         .divider {
@@ -870,120 +880,67 @@
             color: var(--text-secondary);
         }
 
-        /* Mobile Responsive - תוקן למובייל */
+        /* Mobile Responsive */
         @media (max-width: 768px) {
             nav {
-                padding: 0.75rem 0.75rem;
-                gap: 0.5rem;
+                padding: 0.6rem 1rem;
             }
 
-            /* כאן הפתרון: מסתיר את כפתור הווטסאפ המשני במסכים קטנים בלבד */
             .cta-buttons .btn-secondary {
                 display: none;
             }
 
             .logo {
-                font-size: 1rem;
-            }
-
-            .cta-buttons {
-                gap: 0.4rem;
+                font-size: 1.1rem;
             }
 
             .btn {
-                padding: 0.6rem 0.8rem;
-                font-size: 0.8rem;
+                padding: 0.6rem 1rem;
+                font-size: 0.9rem;
             }
 
-            /* Hero */
+            /* מסתיר את המילה "עכשיו" בנייד כדי לחסוך מקום */
+            .desktop-text { display: none; }
+            .mobile-text { display: inline; }
+
             .hero {
-                padding: 8rem 1rem 4rem;
+                padding: 7rem 1rem 4rem;
             }
 
             h1 {
                 font-size: 1.8rem;
             }
 
-            .subtitle {
-                font-size: 1rem;
-            }
-
-            .btn-large {
-                padding: 1rem 1.5rem;
-                font-size: 1rem;
-            }
-
-            /* Sections */
             section {
                 padding: 4rem 1rem;
             }
 
-            h2 {
-                font-size: 1.6rem;
-            }
-
-            .section-subtitle {
-                font-size: 1rem;
-            }
-
-            /* Cards */
-            .problem-grid,
-            .features-grid,
-            .learning-grid,
-            .results-grid,
-            .testimonial-grid,
-            .comparison-grid {
-                grid-template-columns: 1fr;
-                gap: 1.5rem;
-            }
-
-            .trust-content {
-                grid-template-columns: 1fr;
-                gap: 1.5rem;
-            }
-
-            /* Typography adjustments */
-            .problem-card,
-            .feature-card,
-            .learning-card,
-            .result-card,
-            .testimonial-card {
+            .investment-box, .form-container, .solution-box {
                 padding: 1.5rem;
-            }
-
-            .problem-title,
-            .feature-title,
-            .learning-title,
-            .result-title {
-                font-size: 1.2rem;
             }
 
             .price {
                 font-size: 3rem;
             }
-
-            .quote-text {
-                font-size: 1.1rem;
-            }
-
-            .investment-box {
-                padding: 2rem;
-            }
-
-            .form-container {
-                padding: 2rem;
+            
+            .trust-content {
+                gap: 1.5rem;
             }
         }
 
-        /* Very small mobile devices */
-        @media (max-width: 390px) {
+        /* Very small mobile devices (iPhone SE, etc.) */
+        @media (max-width: 380px) {
+            nav {
+                padding: 0.5rem 0.5rem;
+            }
+
             .logo {
                 font-size: 0.9rem;
             }
 
             .btn {
-                padding: 0.5rem 0.6rem;
-                font-size: 0.75rem;
+                padding: 0.5rem 0.7rem;
+                font-size: 0.8rem;
             }
 
             h1 {
@@ -1013,7 +970,10 @@
         <nav>
             <div class="logo">🤖 AI זה קל</div>
             <div class="cta-buttons">
-                <a href="#form" class="btn btn-primary">שריין מקום עכשיו</a>
+                <a href="#form" class="btn btn-primary">
+                    <span class="desktop-text">שריין מקום עכשיו</span>
+                    <span class="mobile-text">להרשמה</span>
+                </a>
                 <a href="https://wa.me/yourphone" class="btn btn-secondary">💬 דבר איתי בווטסאפ</a>
             </div>
         </nav>
