--- a/index.html
+++ b/index.html
@@ -1093,19 +1093,19 @@
     <div class="feature-card">
         <span class="feature-icon">🎯</span>
         <h3 class="feature-title">מפגשים חיים</h3>
-        <p class="feature-text">פעמיים בשבוע, עושים ביחד, בזמן אמת. לא הקלטות שמעלות אבק בתיקייה - אלא עבודה מעשית שבה אתה מקבל פידבק מיידי.</p>
+        <p class="feature-text">פעמיים בשבוע, עושים ביחד, בזמן אמת. לא הקלטות שמעלות אבק בתיקייה - אלא עבודה מעשית שכוללת פידבק מיידי במקום.</p>
     </div>
 
     <div class="feature-card">
         <span class="feature-icon">🤝</span>
         <h3 class="feature-title">ליווי אישי 1:1 צמוד</h3>
-        <p class="feature-text">זה לא "שגר ושכח". במהלך הספרינט נשב לפגישה אישית רק אני ואתה. נעבור על העסק שלך, נדייק את המסרים ונוודא שהכל ברור. אני זמין לשאלות שלך בכל עת - אתה לא עובר את זה לבד בשום שלב.</p>
+        <p class="feature-text">זה לא "שגר ושכח". במהלך הספרינט נשב לפגישה אישית בארבע עיניים. נעבור על העסק שלך, נדייק את המסרים ונוודא שהכל ברור. אני זמין לשאלות שלך בכל עת - אין שום מצב לעבור את זה לבד בשום שלב.</p>
     </div>
 
     <div class="feature-card">
         <span class="feature-icon">🔥</span>
         <h3 class="feature-title">קהילה אמיתית (כן, גם בחיים האמיתיים)</h3>
-        <p class="feature-text">שכח מעוד קבוצת וואטסאפ שקטה. אנחנו בונים כאן קהילה חיה, דוחפת ומרימה שכוללת גם מפגשים פיזיים! המטרה היא להפוך את ה-AI למשהו אנושי ומוחשי, ולייצר לך חיבור עם אנשים שרצים יחד איתך.</p>
+        <p class="feature-text">אפשר לשכוח מעוד קבוצת וואטסאפ שקטה. אנחנו בונים כאן קהילה חיה, דוחפת ומרימה שכוללת גם מפגשים פיזיים! המטרה היא להפוך את ה-AI למשהו אנושי ומוחשי, ולייצר לך חיבור עם אנשים שרצים יחד איתך.</p>
     </div>
 </div>
     </section>
