Update branding from 'AI זה קל' to 'AI זה פשוט'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AI זה קל - ספרינט AI של 14 יום</title>
+    <title>AI זה פשוט - ספרינט AI של 14 יום</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -994,7 +994,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">🤖 AI זה קל</div>
+            <div class="logo">🤖 AI זה פשוט</div>
             <div class="cta-buttons">
                 <a href="#form" class="btn btn-primary">
                     <span class="desktop-text">לשריון מקום עכשיו</span>
@@ -1308,7 +1308,7 @@
 
         <div class="quote-section">
             <p class="quote-text">"אני מאמין שאף אחד לא צריך להישאר מאחור בעידן ה-AI. אבל יותר מזה - אני מאמין שאף אחד לא צריך לעשות את זה לבד. לכן אני כאן. איתך. יד ביד. עד שאתה מצליח."</p>
-            <p class="quote-author">— [השם שלך], מייסד "AI זה קל"</p>
+            <p class="quote-author">— [השם שלך], מייסד "AI זה פשוט"</p>
         </div>
     </section>
 
@@ -1423,7 +1423,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <div class="logo" style="margin-bottom: 1rem;">🤖 AI זה קל</div>
+                <div class="logo" style="margin-bottom: 1rem;">🤖 AI זה פשוט</div>
                 <p style="color: var(--text-secondary);">ספרינט AI מעשי שמלמד אותך לייצר תוכן ולקוחות מהרשתות החברתיות</p>
             </div>
 
@@ -1458,7 +1458,7 @@
         </div>
 
         <div class="copyright">
-            © 2025 AI זה קל. כל הזכויות שמורות.
+            © 2025 AI זה פשוט. כל הזכויות שמורות.
         </div>
     </footer>
 
