--- a/index.html
+++ b/index.html
@@ -1214,15 +1214,7 @@
     </section>
 
     <section id="investment">
-        <h2>כמה זה עולה?</h2>
-        <p class="section-subtitle">השקעה שמחזירה את עצמה במהירות</p>
-
-        <div class="investment-box">
-            <div class="price-container">
-                <div class="price-label">מחיר הספרינט המלא:</div>
-                <div class="price">₪997</div>
-                <div class="price-note">תשלום חד-פעמי | אפשרות לפריסה ל-3 תשלומים</div>
-            </div>
+        <h2>אז מה תכלס מקבלים?</h2>
 
             <div class="included-list">
                 <div style="padding: 1rem 0; font-weight: 700; font-size: 1.2rem; border-bottom: 2px solid var(--border-color);">
@@ -1230,15 +1222,11 @@
                 </div>
                 <div>
                     <span class="check-icon">✅</span>
-                    <span>6 מפגשי Zoom חיים (90 דקות כל אחד)</span>
+                    <span>5 שיעורים אונליין</span>
                 </div>
                 <div>
                     <span class="check-icon">✅</span>
-                    <span>שיעורי בית מעשיים וממוקדים</span>
-                </div>
-                <div>
-                    <span class="check-icon">✅</span>
-                    <span>תמיכה בווטסאפ לאורך הספרינט</span>
+                    <span>פגישה אישית באופן אישי איתך לעבור על הכל</span>
                 </div>
                 <div>
                     <span class="check-icon">✅</span>
@@ -1246,15 +1234,15 @@
                 </div>
                 <div>
                     <span class="check-icon">✅</span>
-                    <span>תבניות וטמפלייטים מוכנים</span>
+                    <span>זמינות מלאה לכל שאלה</span>
                 </div>
                 <div>
                     <span class="check-icon">✅</span>
-                    <span>ליווי אישי עד שאתה מצליח</span>
+                    <span>הצטרפות לקהילה של אנשים שרצים ביחד איתך</span>
                 </div>
                 <div>
                     <span class="check-icon">✅</span>
-                    <span>אפשרות לחזור על הספרינט (אם פתוח מחזור חדש)</span>
+                    <span>גישה לאירועים ולמפגשים עם הקהילה</span>
                 </div>
             </div>
 
