Add centered button link to form section

--- a/index.html
+++ b/index.html
@@ -1095,6 +1095,11 @@
 </div>
     </section>
 
+    <div style="text-align: center; margin-top: 2.5rem;">
+            <a href="#form" class="btn btn-primary btn-large">🚀 אני בפנים!</a>
+        </div>
+    </section>
+
     <section id="schedule">
         <h2>5 כלי AI שיהפכו אותך למכונת תוכן</h2>
         <p class="section-subtitle">כל מפגש = שליטה בכלי חדש לשימוש מידיי כבר באותו היום</p>
