Change 'מפגש Zoom חי' to 'שיעור אונליין'

--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                 <div class="day-card">
                     <div class="day-header">
                         <span class="day-number">מפגש 1</span>
-                        <span class="day-type">מפגש Zoom חי</span>
+                        <span class="day-type">שיעור אונליין</span>
                     </div>
                     <h4 class="day-title">🎬 תסריטים ויראליים</h4>
                     <p class="day-description">כתיבת תסריטים מנצחים עם AI. בלי לשבור את הראש ובלי לתכנן שעות - ה-AI פשוט עושה הכל. עובדים עם תבניות מוכנות שרק צריך למלא.</p>
@@ -1116,7 +1116,7 @@
                 <div class="day-card">
                     <div class="day-header">
                         <span class="day-number">מפגש 2</span>
-                        <span class="day-type">מפגש Zoom חי</span>
+                        <span class="day-type">שיעור אונליין</span>
                     </div>
                     <h4 class="day-title">סרטונים ללא מצלמה</h4>
                     <p class="day-description">יצירת סרטונים ממגנטים בלי לקום מהספה! אפס עריכה, בלי לפתוח מצלמה, ואפילו בלי להקליט קול. ה-AI מייצר את הכל בשבילך..</p>
@@ -1125,7 +1125,7 @@
                 <div class="day-card">
                     <div class="day-header">
                         <span class="day-number">מפגש 3</span>
-                        <span class="day-type">מפגש Zoom חי</span>
+                        <span class="day-type">שיעור אונליין</span>
                     </div>
                     <h4 class="day-title">דף נחיתה בחינם לגמרי</h4>
                     <p class="day-description">לבנות לעצמנו בית. בניית דף נחיתה מקצועי שיקלוט את הלקוחות. מערכת חינמית לכל החיים, ללא צורך לדעת אפילו שורת קוד אחת.</p>
@@ -1134,7 +1134,7 @@
 
                 <div class="day-card">
                     <div class="day-header">
-                        <span class="day-number">מפגש 4</span>
+                        <span class="day-number">שיעור אונליין</span>
                         <span class="day-type">מפגש Zoom חי</span>
                     </div>
                     <h4 class="day-title">קידום ממומן</h4>
@@ -1144,7 +1144,7 @@
                 <div class="day-card">
                     <div class="day-header">
                         <span class="day-number">מפגש 5</span>
-                        <span class="day-type">מפגש Zoom חי</span>
+                        <span class="day-type">שיעור אונליין</span>
                     </div>
                     <h4 class="day-title">אוטומציות בוואצאפ</h4>
                     <p class="day-description">מערכת שעובדת 24/7. אוטומציה לחימום לידים ומענה מהיר לכל מתעניין. והכי טוב? עושים את הכל בכלים חינמיים לחלוטין.</p>
