Update day card details for online lesson

--- a/index.html
+++ b/index.html
@@ -1134,8 +1134,8 @@
 
                 <div class="day-card">
                     <div class="day-header">
-                        <span class="day-number">שיעור אונליין</span>
-                        <span class="day-type">מפגש Zoom חי</span>
+                        <span class="day-number">מפגש 4</span>
+                        <span class="day-type">שיעור אונליין</span>
                     </div>
                     <h4 class="day-title">קידום ממומן</h4>
                     <p class="day-description">מריצים קמפיין פרסומי בלי קמפיינר. ה-AI כותב את הקופי ובוחר את הקהל המדויק, מה שחוסך עשרות אלפי שקלים על סוכנויות פרסום..</p>
