--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
         <div class="testimonial-grid">
             <div class="testimonial-card">
                 <div class="stars">⭐⭐⭐⭐⭐</div>
-                <p class="testimonial-text">"לפני הספרינט, היה לי אפס נוכחות ברשתות. היום אני מעלה סרטונים באופן קבוע פניות בחודש מאינסטגרם. ומתנאל מלכה היה איתי בכל צעד."</p>
+                <p class="testimonial-text">"לפני הספרינט, היה לי אפס נוכחות ברשתות. היום אני מעלה סרטונים באופן קבוע פניות בחודש מאינסטגרם. ומתנאל היה איתי בכל צעד."</p>
                 <p class="testimonial-author">דני כהן</p>
                 <p class="testimonial-role">בעל סטודיו לעיצוב פנים</p>
             </div>
@@ -1239,7 +1239,7 @@
 
             <div class="testimonial-card">
                 <div class="stars">⭐⭐⭐⭐⭐</div>
-                <p class="testimonial-text">"זה לא סתם עוד קורס. מתנאל מלכה באמת זמין, באמת עוזר, באמת דואג שאתה מצליח. משקיע מעולה."</p>
+                <p class="testimonial-text">"זה לא סתם עוד קורס. מתנאל באמת זמין, באמת עוזר, באמת דואג שאתה מצליח. משקיע מעולה."</p>
                 <p class="testimonial-author">יוסי אברהם</p>
                 <p class="testimonial-role">יועץ פיננסי</p>
             </div>
