--- a/index.html
+++ b/index.html
@@ -638,50 +638,48 @@
             display: none;
         }
 
-        /* סקשן הציטוט עם התמונה החדשה והמוגדלת */
+        /* סקשן הציטוט והתמונה - מעודכן לתמונה גדולה ומלאה */
         .quote-section {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 4rem auto 0 auto;
             padding: 3rem;
             background: var(--card-bg);
             border-radius: 16px;
-            border-right: 4px solid var(--accent-blue);
+            border: 1px solid var(--border-color);
             display: flex;
             align-items: center;
-            gap: 2.5rem;
+            gap: 3rem;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
         }
 
         .quote-image {
-            flex-shrink: 0;
-            width: 200px; /* תמונה גדולה הרבה יותר */
+            flex: 1;
+            max-width: 450px; /* תמונה גדולה מאוד במחשב */
         }
 
         .quote-image img {
             width: 100%;
-            height: 100%;
-            aspect-ratio: 1 / 1;
-            object-fit: cover;
-            border-radius: 50%;
-            border: 4px solid var(--accent-blue);
-            box-shadow: 0 10px 25px rgba(59, 130, 246, 0.2);
+            height: auto; /* שומר על הפרופורציות המקוריות - מלבן */
+            border-radius: 12px; /* עיגול פינות עדין מאוד רק כדי להשתלב יפה בעיצוב */
+            box-shadow: 0 15px 35px rgba(0,0,0,0.3);
             display: block;
         }
 
         .quote-content {
-            flex-grow: 1;
+            flex: 1.5;
         }
 
         .quote-text {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             line-height: 1.8;
             font-style: italic;
-            color: var(--text-secondary);
-            margin-bottom: 1rem;
+            color: var(--text-primary);
+            margin-bottom: 1.5rem;
         }
 
         .quote-author {
-            font-size: 1.1rem;
-            font-weight: 600;
+            font-size: 1.2rem;
+            font-weight: 700;
             color: var(--accent-blue);
         }
 
@@ -808,7 +806,7 @@
             border-top: 1px solid var(--border-color);
             color: var(--text-secondary);
         }
-        
+
         /* Mobile Sticky CTA Container */
         .mobile-sticky-wrapper { display: none; }
 
@@ -850,26 +848,25 @@
                 padding: 1.5rem;
             }
 
-            /* התאמות לנייד עבור סקשן הציטוט והתמונה */
+            /* התאמות לנייד עבור סקשן הציטוט והתמונה - מסך מלא */
             .quote-section {
                 padding: 2rem 1.5rem;
-                gap: 1.5rem;
+                gap: 2rem;
                 flex-direction: column; 
                 text-align: center;
-                border-right: none;
-                border-top: 4px solid var(--accent-blue);
             }
 
             .quote-image {
-                width: 130px; 
+                width: 100%; /* תופס את כל רוחב המסך בנייד */
+                max-width: 100%; 
                 margin: 0 auto;
             }
 
             .quote-text {
-                font-size: 1.1rem; 
-                margin-bottom: 0.5rem;
+                font-size: 1.2rem; 
+                margin-bottom: 1rem;
             }
-            
+
             /* הצגת הכפתור הצף בנייד בלבד */
             .mobile-sticky-wrapper {
                 display: block;
@@ -882,6 +879,7 @@
                 z-index: 999;
                 animation: slideUp 0.5s ease-out forwards;
             }
+
             .mobile-sticky-wrapper .btn {
                 width: 100%;
                 padding: 1rem;
@@ -1250,7 +1248,7 @@
     <section>
         <div class="quote-section">
             <div class="quote-image">
-                <img src="https://res.cloudinary.com/dhkn7tjxq/image/upload/w_600,f_auto,q_auto/v1771869389/IMG_2143_uooldm.png" alt="מתנאל מלכה">
+                <img src="https://res.cloudinary.com/dhkn7tjxq/image/upload/f_auto,q_auto/v1771869389/IMG_2143_uooldm.png" alt="מתנאל מלכה">
             </div>
             <div class="quote-content">
                 <p class="quote-text">"אני מאמין שאף אחד לא צריך להישאר מאחור בעידן ה-AI. אבל יותר מזה - אני מאמין שאף אחד לא צריך לעשות את זה לבד. לכן אני כאן. איתך. יד ביד. עד שאתה מצליח."</p>
