--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
             <div class="hero-content">
                 <div class="urgency-badge">⏰ הספרינט הבא: 24.02</div>
                 <h1>לייצר לקוחות מהרשתות.<br>ב-14 יום.</h1>
-                <p class="subtitle">ספרינט AI מעשי שמלמד אותך לייצר תוכן איכותי ולקוחות אמיתיים מהרשתות החברתיות<br>בליווי צמוד, פעם אחת ולתמיד.</p>
+                <p class="subtitle">ספרינט AI מעשי שמלמד אותך לייצר לקוחות אמיתיים מהרשתות החברתיות<br>בליווי צמוד, פעם אחת ולתמיד.</p>
                 <div class="hero-cta">
                     <a href="#form" class="btn btn-primary btn-large">💪 להבטחת המקום שלך!</a>
                     <a href="#problem" class="btn btn-secondary btn-large">📖 כל הפרטים כאן</a>
