--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
         </section>
 
         <section id="problem">
-            <h2>הרי ידוע לך שנוכחות ברשתות היא חובה. אבל...</h2>
+            <h2>הרי ידוע לך הכוח של הרשתות. אבל...</h2>
 
             <div class="problem-grid">
                 <div class="problem-card">
