--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="ספרינט AI מעשי של 14 יום עם מתנאל מלכה. בואו ללמוד איך לייצר תוכן איכותי ולקוחות אמיתיים מהרשתות החברתיות בליווי צמוד. שריינו מקום עכשיו!">
     
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.co.il/"> <meta property="og:title" content="AI זה פשוט - ספרינט AI של 14 יום">
+    <meta property="og:url" content="https://bit.ly/4cQfoLg"> <meta property="og:title" content="AI זה פשוט - ספרינט AI של 14 יום">
     <meta property="og:description" content="ב-14 יום בלבד: לומדים לייצר תוכן ולקוחות מהרשתות החברתיות בעזרת כלי בינה מלאכותית, צעד אחר צעד עם ליווי צמוד.">
     <meta property="og:image" content="https://res.cloudinary.com/dhkn7tjxq/image/upload/v1771885244/IMG_2163_iiwtbs.png">
     
@@ -947,7 +947,7 @@
                     <span class="desktop-text">לשריון מקום עכשיו</span>
                     <span class="mobile-text">להרשמה</span>
                 </a>
-                <a href="https://wa.me/yourphone" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">💬 למעבר לווטסאפ</a>
+                <a href="https://wa.link/9jo3zq" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">💬 למעבר לווטסאפ</a>
             </div>
         </nav>
     </header>
@@ -1223,7 +1223,7 @@
 
                 <div class="divider">או</div>
 
-                <a href="https://wa.me/yourphone" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-large">💬 העדפה לדבר איתי קודם? לחץ כאן לווטסאפ</a>
+                <a href="https://wa.link/9jo3zq" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-large">💬 העדפה לדבר איתי קודם? לחץ כאן לווטסאפ</a>
             </div>
         </section>
 
