--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@
     </footer>
 
     <div class="mobile-sticky-wrapper">
-        <a href="#form" class="btn btn-primary" aria-label="לשריון מקום עכשיו">🎟️</a>
+        <a href="https://wa.link/9jo3zq" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="דברו איתי בווטסאפ">💬</a>
     </div>
 
     <script>
