--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
                     <img src="https://res.cloudinary.com/dhkn7tjxq/image/upload/v1771885244/IMG_2163_iiwtbs.png" alt="מתנאל מלכה, מייסד תוכנית AI זה פשוט, מחייך למצלמה">
                 </div>
                 <div class="quote-content">
-                    <p class="quote-text">"אני מאמין שאף אחד לא צריך להישאר מאחור בעידן ה-AI. אבל יותר מזה - אני מאמין שאף אחד לא צריך לעשות את זה לבד. לכן אני כאן. איתך. יד ביד. עד שאתה מצליח."</p>
+                    <p class="quote-text">"אני מאמין שאין סיבה לא להצליח בעידן הבינה המלאכותית. אבל יותר מזה - אני מאמין בכוחה של הקהילה. לכן בניתי קהילה אנושית שעושה את זה ביחד."</p>
                     <p class="quote-author">— מתנאל מלכה, מייסד "AI זה פשוט"</p>
                 </div>
             </div>
