--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
                         ❓ איך עובד "מפגש ראשון ללא עלות"?
                     </div>
                     <div class="faq-answer">
-                        מגיעים למפגש הראשון חינם. לא אהבת לא שילמת. אם אהבת - ממשיך לשאר המפגשים.
+                        ההגעה למפגש הראשון היא ללא עלות. לא אהבת לא שילמת. במידה וכן - נמשיך יחד לשאר המפגשים.
                     </div>
                 </div>
             </div>
