--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
         </section>
 
         <section id="different">
-            <h2>למה זה לא עוד קורס שתשכח?</h2>
+            <h2>למה זה לא עוד "קורס"?</h2>
             <p class="section-subtitle">ההבדל שעושה את כל ההבדל</p>
 
             <div class="comparison-grid">
