--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <title>בינה מלאכותית זה פשוט | מתנאל מלכה</title>
+    <title>AI זה פשוט</title>
     <meta name="description" content="לייצר לקוחות בעידן הבינה המלאכותית מעולם לא היה פשוט יותר. הירשמו למפגש הקרוב ללא עלות.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
