--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
 
                 <div class="card">
                     <span class="card-icon">💸</span>
-                    <h3 class="card-title">אין תקציב שיווק?</h3>
-                    <p class="text-muted">אתם לא צריכים הון ראשוני. רוב הכלים שנשתמש בהם לייצור לקוחות מהרשתות הם חינמיים לגמרי. תשאירו את הכסף בכיס.</p>
+                    <h3 class="card-title">חייבים הון ראשוני כדי להתחיל? ממש לא.</h3>
+                    <p class="text-muted">רוב הכלים שנשתמש בהם לייצור לקוחות מהרשתות הם חינמיים לגמרי. השאר זולים להפליא. תשאירו את הכסף אצלכם בכיס.</p>
                 </div>
 
                 <div class="card">
