--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">🤖 בינה מלאכותית זה פשוט</div>
+            <div class="logo">🤖 AI זה פשוט</div>
             <div>
                 <a href="#form" class="btn btn-primary" style="padding: 0.5rem 1.2rem; font-size: 1rem;">שריון מקום למפגש</a>
             </div>
